--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-Режим вывода команд на экран (ECHO) включен.
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Song Bird</title>
+</head>
+
+<body>
+
+</body>
+
+</html>
