--- a/index.html
+++ b/index.html
@@ -6,10 +6,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Song Bird</title>
   <link rel="stylesheet" href="style/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
-
+  <header class="header">
+    <div class="header__container">
+      <a href="#" class="header__logo">
+        <img src="src/img/logo.svg" alt="Logo" class="header__logo-img">
+      </a>
+      <div class="score">
+        <p class="score__text">Score: <span class="score__value">0</span></p>
+      </div>
+    </div>
+  </header>
 </body>
 
 </html>
