--- a/index.html
+++ b/index.html
@@ -23,6 +23,55 @@
       </div>
     </div>
   </header>
+  <section class="game-field">
+    <div class="game-field__container">
+      <ul class="rounds-list game-field__rounds">
+        <li class="rounds-list__item rounds-list__item_active">
+          <a href="#" class="rounds-list__link">Разминка</a>
+        </li>
+        <li class="rounds-list__item">
+          <a href="#" class="rounds-list__link">Воробьиные</a>
+        </li>
+        <li class="rounds-list__item">
+          <a href="#" class="rounds-list__link">Лесные птицы</a>
+        </li>
+        <li class="rounds-list__item">
+          <a href="#" class="rounds-list__link">Певчие птицы</a>
+        </li>
+        <li class="rounds-list__item">
+          <a href="#" class="rounds-list__link">Хищные птицы</a>
+        </li>
+        <li class="rounds-list__item">
+          <a href="#" class="rounds-list__link">Морские птицы</a>
+        </li>
+      </ul>
+      <div class="random-bird game-field__random-bird">
+        <div class="random-bird__bird-img img-unknown">
+        </div>
+        <div class="random-bird__bird-info">
+          <div class="random-bird__title">
+            <p class="random-bird__name name-unknown">Ворон</p>
+          </div>
+          <div class="random-bird__voice">
+            <div class="player">
+              <div class="player__playback-button">
+                <div class="play-icon"></div>
+              </div>
+              <div class="player__timebar">
+                <div class="player__timebar-circle"></div>
+                <div class="player__timebar-bar"></div>
+              </div>
+              <div class="player__time-info">
+                <div class="player__time-start"></div>
+                <div class="player__time-end"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </section>
 </body>
 
 </html>
