--- a/index.html
+++ b/index.html
@@ -58,13 +58,15 @@
                 <div class="play-icon"></div>
               </div>
               <div class="player__timebar">
-                <div class="player__timebar-circle"></div>
-                <div class="player__timebar-bar"></div>
+                <div class="player__timebar-bar">
+                  <div class="player__timebar-circle"></div>
+                </div>
+                <div class="player__time-info">
+                  <div class="player__time-start">00:00</div>
+                  <div class="player__time-end">00:06</div>
+                </div>
               </div>
-              <div class="player__time-info">
-                <div class="player__time-start"></div>
-                <div class="player__time-end"></div>
-              </div>
+
             </div>
           </div>
         </div>
