--- a/index.html
+++ b/index.html
@@ -46,31 +46,98 @@
         </li>
       </ul>
       <div class="random-bird game-field__random-bird">
-        <div class="random-bird__bird-img img-unknown">
-        </div>
-        <div class="random-bird__bird-info">
-          <div class="random-bird__title">
-            <p class="random-bird__name name-unknown">Ворон</p>
+        <div class="random-bird__header">
+          <div class="random-bird__bird-img img-unknown">
           </div>
-          <div class="random-bird__voice">
-            <div class="player">
-              <div class="player__playback-button">
-                <div class="play-icon"></div>
-              </div>
-              <div class="player__timebar">
-                <div class="player__timebar-bar">
-                  <div class="player__timebar-circle"></div>
+          <div class="random-bird__bird-info">
+            <div class="random-bird__title">
+              <p class="random-bird__random-name name-unknown">Ворон</p>
+            </div>
+            <div class="random-bird__voice">
+              <div class="player">
+                <div class="player__playback-button">
+                  <div class="play"></div>
                 </div>
-                <div class="player__time-info">
-                  <div class="player__time-start">00:00</div>
-                  <div class="player__time-end">00:06</div>
+                <div class="player__timebar">
+                  <div class="player__timebar-bar">
+                    <div class="player__timebar-circle"></div>
+                  </div>
+                  <div class="player__time-info">
+                    <div class="player__time-start">00:00</div>
+                    <div class="player__time-end">00:06</div>
+                  </div>
                 </div>
               </div>
-
             </div>
           </div>
         </div>
       </div>
+      <div class="game-field__game-wrapper">
+        <ul class="game-field__variants variants-list">
+          <li class="variants-list__variant">
+            <div class="variants-list__circle inactive"></div>Ворон
+          </li>
+          <li class="variants-list__variant">
+            <div class="variants-list__circle inactive"></div>Журавль
+          </li>
+          <li class="variants-list__variant">
+            <div class="variants-list__circle inactive"></div>Ласточка
+          </li>
+          <li class="variants-list__variant">
+            <div class="variants-list__circle inactive"></div>Козодой
+          </li>
+          <li class="variants-list__variant">
+            <div class="variants-list__circle inactive"></div>Кукушка
+          </li>
+          <li class="variants-list__variant">
+            <div class="variants-list__circle inactive"></div>Синица
+          </li>
+        </ul>
+        <div class="game-field__chosen-bird-info">
+          <div class="random-bird">
+            <div class="random-bird__header">
+              <div class="random-bird__bird-img">
+              </div>
+              <div class="random-bird__bird-info">
+                <div class="random-bird__title">
+                  <p class="random-bird__choosen-name">Ворон</p>
+                </div>
+                <div class="random-bird__latin-title">
+                  <p class="random-bird__latin-name">Corvus corax</p>
+                </div>
+                <div class="random-bird__voice">
+                  <div class="player">
+                    <div class="player__playback-button">
+                      <div class="play"></div>
+                    </div>
+                    <div class="player__timebar">
+                      <div class="player__timebar-bar">
+                        <div class="player__timebar-circle"></div>
+                      </div>
+                      <div class="player__time-info">
+                        <div class="player__time-start">00:00</div>
+                        <div class="player__time-end">00:06</div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="random-bird__body">
+              <div class="random-bird__about">
+                <p class="random-bird__about-text">
+                  Ворон – крупная птица. Длина тела достигает 70 сантиметров, размах крыльев – до полутора метров.
+                  Вороны населяют окрестности Тауэра. В Англии бытует поверье, что в день, когда черные вороны улетят от
+                  Тауэра, монархия рухнет.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <audio src="src/sounds/win.mp3" id="winSound"></audio>
+        <audio src="src/sounds/wrong.mp3" id="wrongSound"></audio>
+      </div>
+      <div class="game-field__next-btn" id="nextLvl">Next Level</div>
     </div>
 
   </section>
