feat: adaptive for 990px and 759px

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <audio src="src/sounds/win.mp3" id="winSound"></audio>
         <audio src="src/sounds/wrong.mp3" id="wrongSound"></audio>
       </div>
-      <div class="game-field__next-btn" id="nextLvl">Next Level</div>
+      <div class="game-field__next-btn next-inactive" id="nextLvl">Next Level</div>
     </div>
 
   </section>
