feat: add player function

--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
       </ul>
       <div class="random-bird game-field__random-bird">
         <div class="random-bird__header">
-          <div class="random-bird__bird-img img-unknown" id="imgUknown">
+          <div class="random-bird__bird-img img-unknown" id="imgUnknown">
           </div>
           <div class="random-bird__bird-info">
             <div class="random-bird__title">
               <p class="random-bird__random-name name-unknown" id="nameUnknown">Ворон</p>
             </div>
             <div class="random-bird__voice">
-              <div class="player">
-                <div class="player__playback-button">
-                  <div class="play"></div>
+              <div class="player" id="playerUnknown">
+                <div class="player__playback-button play">
+                  <div class="play-icon"></div>
                 </div>
                 <div class="player__timebar">
                   <div class="player__timebar-bar">
