--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           </div>
           <div class="random-bird__bird-info">
             <div class="random-bird__title">
-              <p class="random-bird__random-name name-unknown" id="nameUnknown">Ворон</p>
+              <p class="random-bird__random-name name-unknown" id="nameUnknown"></p>
             </div>
             <div class="random-bird__voice">
               <div class="player" id="playerUnknown">
