--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
       </ul>
       <div class="random-bird game-field__random-bird">
         <div class="random-bird__header">
-          <div class="random-bird__bird-img img-unknown" id="imgUnknown">
+          <div class="random-bird__bird-img" id="imgUnknown">
           </div>
           <div class="random-bird__bird-info">
             <div class="random-bird__title">
-              <p class="random-bird__random-name name-unknown" id="nameUnknown"></p>
+              <p class="random-bird__random-name" id="nameUnknown"></p>
             </div>
             <div class="random-bird__voice">
               <div class="player" id="playerUnknown">
@@ -57,31 +57,13 @@
       </div>
       <div class="game-field__game-wrapper">
         <ul class="game-field__variants variants-list">
-          <li class="variants-list__variant">
-            <div class="variants-list__circle inactive"></div>Ворон
-          </li>
-          <li class="variants-list__variant">
-            <div class="variants-list__circle inactive"></div>Журавль
-          </li>
-          <li class="variants-list__variant">
-            <div class="variants-list__circle inactive"></div>Ласточка
-          </li>
-          <li class="variants-list__variant">
-            <div class="variants-list__circle inactive"></div>Козодой
-          </li>
-          <li class="variants-list__variant">
-            <div class="variants-list__circle inactive"></div>Кукушка
-          </li>
-          <li class="variants-list__variant">
-            <div class="variants-list__circle inactive"></div>Синица
-          </li>
         </ul>
         <div class="game-field__chosen-bird-info">
         </div>
         <audio src="src/sounds/win.mp3" id="winSound"></audio>
         <audio src="src/sounds/wrong.mp3" id="wrongSound"></audio>
       </div>
-      <div class="game-field__next-btn next-inactive" id="nextLvl">Next Level</div>
+      <div class="game-field__next-btn" id="nextLvl">Next Level</div>
     </div>
 
   </section>
