--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div>
             <div class="random-bird__voice">
               <div class="player" id="playerUnknown">
-                <div class="player__playback-button play">
+                <div class="player__playback-button play secret">
                   <div class="play-icon"></div>
                 </div>
                 <div class="player__timebar">
@@ -62,6 +62,7 @@
         </div>
         <audio src="src/sounds/win.mp3" id="winSound"></audio>
         <audio src="src/sounds/wrong.mp3" id="wrongSound"></audio>
+        <audio src="src/sounds/winner.mp3" id="winnerSound"></audio>
       </div>
       <div class="game-field__next-btn" id="nextLvl">Next Level</div>
     </div>
