--- a/fragment.html
+++ b/fragment.html
@@ -1,38 +1,35 @@
-<div class="random-bird__header">
-  <div class="random-bird__bird-img">
-  </div>
-  <div class="random-bird__bird-info">
-    <div class="random-bird__title">
-      <p class="random-bird__choosen-name">Ворон</p>
-    </div>
-    <div class="random-bird__latin-title">
-      <p class="random-bird__latin-name">Corvus corax</p>
-    </div>
-    <div class="random-bird__voice">
-      <div class="player">
-        <div class="player__playback-button">
-          <div class="play"></div>
-        </div>
-        <div class="player__timebar">
-          <div class="player__timebar-bar">
-            <div class="player__timebar-circle"></div>
+<div class="random-bird">
+  <div class="random-bird__header">
+    <div class="random-bird__bird-img" id="chosenImg"></div>
+    <div class="random-bird__bird-info">
+      <div class="random-bird__title">
+        <p class="random-bird__choosen-name">${info.name}</p>
+      </div>
+      <div class="random-bird__latin-title">
+        <p class="random-bird__latin-name">${info.species}</p>
+      </div>
+      <div class="random-bird__voice">
+        <div class="player">
+          <div class="player__playback-button">
+            <div class="play"></div>
           </div>
-          <div class="player__time-info">
-            <div class="player__time-start">00:00</div>
-            <div class="player__time-end">00:06</div>
+          <div class="player__timebar">
+            <div class="player__timebar-bar">
+              <div class="player__timebar-circle"></div>
+            </div>
+            <div class="player__time-info">
+              <div class="player__time-start">00:00</div>
+              <div class="player__time-end">00:00</div>
+            </div>
           </div>
+          <audio src="" id="choosenSong"></audio>
         </div>
-        <audio src="" id="choosenSong"></audio>
       </div>
     </div>
   </div>
-</div>
-<div class="random-bird__body">
-  <div class="random-bird__about">
-    <p class="random-bird__about-text">
-      Ворон – крупная птица. Длина тела достигает 70 сантиметров, размах крыльев – до полутора метров.
-      Вороны населяют окрестности Тауэра. В Англии бытует поверье, что в день, когда черные вороны улетят от
-      Тауэра, монархия рухнет.
-    </p>
+  <div class="random-bird__body">
+    <div class="random-bird__about">
+      <p class="random-bird__about-text">${info.description}</p>
+    </div>
   </div>
 </div>
