feat: configure webpack

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Song Bird</title>
-  <link rel="stylesheet" href="style/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
@@ -49,7 +48,7 @@
                     <div class="player__time-end">00:00</div>
                   </div>
                 </div>
-                <audio src="" id="unknownSong"></audio>
+                <audio src="#" id="unknownSong"></audio>
               </div>
             </div>
           </div>
@@ -68,7 +67,7 @@
     </div>
 
   </section>
-  <script type="module" src="build/index.js"></script>
+  <!--<script type="module" src="build/index.js"></script>-->
 </body>
 
 </html>
